fixed logout link v alignment

--- a/CI-Host/www/default.css
+++ b/CI-Host/www/default.css
@@ -20,7 +20,7 @@ body{
 }
 
 .center{
-text-align: center;
+    text-align: center;
 }
 
 #site-tile-center-hold{
@@ -31,7 +31,7 @@ text-align: center;
 
 .site-title-hold{
     width: 160px;
-    height: 30px;
+    height: 40px;
     border: solid 2px black;
     background: white;
 }
@@ -39,13 +39,6 @@ text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     display: inline;
-}
-
-.site-login-title-hold{
-    width: 160px;
-    height: 40px;
-    border: solid 2px black;
-    background: white;
 }
 
 .title-bold{
@@ -116,7 +109,8 @@ p, a, h1, h2, h3, h4, h5{
 }
 
 a.logout{
-
+    display: inline-block;
+    vertical-align: bottom;
 }
 
 .panel-heading-tab{
